# AsteriodsClone

./: Asteriods.kdev4  CMakeLists.txt
doc/: anfordungen.txt
src/: CMakeLists.txt  main.cpp
src/controller/: icontroller.h  sdlcontroller.cpp  sdlcontroller.h
src/model/: game_logic.cpp  game_logic.h
src/model/asteriod/: asteriod.cpp  asteriod.h
src/model/audio/: asteriod_sounds.cpp  asteriod_sounds.h  soundmanager.cpp  soundmanager.h
src/model/physic_engine/: collision_listener.h  physic_component.h  physic_engine.cpp  physic_engine.h
src/model/player/: missle.cpp  missle.h  spaceship.cpp  spaceship.h
src/model/ufo/: ufo.cpp  ufo.h
src/share/: random.cpp  random.h
src/share/math/: helper.h  transformation2d.h  vector2f.h
src/share/timer/: timer.cpp  timer.h
src/view/: geometry.cpp  geometry.h  iview.h  sdl_gl_view.cpp  sdl_gl_view.h  sdl_view.cpp  sdl_view.h
src/view/gui/: asteriods_gui.cpp  asteriods_hub.h  letter_line.cpp  letter_line.h
src/view/gui/my_font/: my_letters.h  my_numbers.h
src/view/objects/: asteriod_renderable.cpp  asteriod_renderable.h  explosion_renderable.cpp  explosion_renderable.h  spaceship_geometry.h  spaceship_renderable.cpp  spaceship_renderable.h  ufo_renderable.cpp  ufo_renderable.h
test/: 1sound_test.cpp  CMakeLists.txt  dummy_collision_listener.h  dummy_view.h  full_game_test.cpp  model_test.cpp  transformation_test.cpp
